--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="screen_off">Screen Off</string>
     <string name="miscellaneous">Miscellaneous</string>
     <string name="optimize_led_screen">AMOLED display optimization</string>
-    <string name="cause_battery_drain_lock" translatable="false">@string/battery_drain_warn</string>
     <string name="cause_battery_drain_off" translatable="false">@string/battery_drain_warn</string>
     <string name="battery_drain_warn">Will cause battery drain</string>
 
@@ -54,4 +53,9 @@
     <string name="donation_error">Oops! Error while sharing love with us!</string>
     <string name="proceed_paypal">Proceed to Paypal?</string>
 
+
+    <string name="indefinite">Indefinite</string>
+    <string name="minutes">Minutes</string>
+    <string name="seconds">Seconds</string>
+    <string name="vibrate">Vibrate</string>
 </resources>
