Modified and prepared for open-sourcing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
         \nAlso, Torchie <b>DOES NOT HAVE INTERNET PERMISSION</b>, so it is impossible to <i>send</i> anything to anyone\n\n Torchie CANNOT <i>COLLECT</i> anything from anyone. Feel free to enable Torchie functionality! <a href="https://torchieapp.wordpress.com/help/">Learn more</a> </string>
     <string name="permission">Enable Torchie Functionality?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\n<b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nMany thanks to following great hearts, who helped to translate Torchie</string>
+    <string name="about_note"><b>Torchie</b> is made by two brothers\nMerbin J Anselm and Rebin J Anselm\nanselmbros@gmail.com\n\nMany thanks to following great hearts, who helped to translate Torchie</string>
     <string name="about_anselm">About Anselm &amp; Anselm</string>
     <string name="official_website">Visit official site</string>
     <string name="join_community">Join Beta Community</string>
@@ -72,5 +72,8 @@
     <string name="not_work_screen_off">Will not work in Screen off!</string>
     <string name="torch_time_out">Torch time-out</string>
     <string name="language_select">Choose language</string>
+
+    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2016\n\nTorchie comes with absolutely no warranty. This program is free software licensed under
+    GNU General Public License v2.0\nFull source-code for is available here https://github.com/anselm94/torchie-android\n</string>
 
 </resources>
