--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,11 +33,11 @@
     <string name="battery_drain_warn">Will cause battery drain</string>
 
     <string name="donate">Donate</string>
-    <string name="tellfriend">Tell a friend</string>
-    <string name="rate">Rate Torchie</string>
+    <string name="tellfriend">Share</string>
+    <string name="rate">Rate</string>
     <string name="about">About</string>
     <string name="settings">Settings</string>
-    <string name="help_feedback">Help &amp; Feedback</string>
+    <string name="help_feedback">Contact</string>
     <string name="enable">Enable</string>
     <string name="later">Later</string>
     <string name="loading">loading</string>
@@ -50,7 +50,7 @@
     <string name="share">Share</string>
 
     <string name="share_info">Turn on torch just by holding volume buttons together with Torchie. Download Torchie now! </string>
-    <string name="share_via">Share a word about Torchie via</string>
+    <string name="share_via">Share Torchie via</string>
 
     <string name="welcome"><b>Welcome</b></string>
     <string name="welcome_note">Make your life easier with <b>Torchie</b>! \n\nEnable <b>\'Torchie functionality\'</b> to turn on/off torch just by <b>holding volume buttons together</b>!\n\nTweak more in Torchie <b>Settings</b>!</string>
