--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -20,71 +20,76 @@
     <string name="app_name">Torchie</string>
     <string name="activity_settings">Paramètres Torchie</string>
     <string name="service_torchiequick_name">Torchie Quick</string>
-    <string name="accessibility_service_description">Quand \'Torchie Quick\' est activé, allumez/éteignez la lampe torche en appuyant sur les boutons de volume en même temps</string>
+    <string name="accessibility_service_description">Quand \"Torchie Quick\" est activé, allumez/éteignez la lampe torche en appuyant sur les boutons de volume en même temps</string>
 
     <string name="torchie_functionality">Fonctionnalités Torchie</string>
     <string name="screen_on">Écran allumé</string>
     <string name="screen_lock">Écran de verrouillage</string>
     <string name="screen_off">Écran éteint</string>
     <string name="miscellaneous">Divers</string>
-    <string name="optimize_led_screen">Optimisation pour écrans AMOLED</string>
-    <string name="battery_drain_warn">Va provoquer une décharge de la batterie</string>
+    <string name="optimize_led_screen">Optimisation pour écran AMOLED</string>
+    <string name="battery_drain_warn">Causera une décharge de la batterie</string>
 
     <string name="donate">Faire un don</string>
-    <string name="tellfriend">En parler à un ami</string>
-    <string name="rate">Noter Torchie</string>
-    <string name="about">A propos</string>
+    <string name="tellfriend">Partager</string>
+    <string name="rate">Évaluer</string>
+    <string name="about">À propos</string>
     <string name="settings">Paramètres</string>
-    <string name="help_feedback">Aide &amp; Commentaires</string>
+    <string name="help_feedback">Contacter</string>
     <string name="enable">Activer</string>
     <string name="later">Plus tard</string>
     <string name="loading">chargement</string>
     <string name="select_donation_amount">Choisissez le montant du <b>don</b></string>
-    <string name="thank_you">Merci!</string>
+    <string name="thank_you">Merci !</string>
     <string name="donate_via_paypal">Donner via Paypal</string>
     <string name="ok">OK</string>
     <string name="proceed">Continuer</string>
     <string name="dismiss">Annuler</string>
     <string name="share">Partager</string>
 
-    <string name="share_info">Allumez la torche simplement en appuyant sur les boutons de volume avec Torchie. Téléchargez Torchie maintenant! </string>
-    <string name="share_via">Dites un mot sur Torchie avec</string>
+    <string name="share_info">Allumez la lampe torche simplement en appuyant sur les boutons de volume avec Torchie. Téléchargez Torchie maintenant !</string>
+    <string name="share_via">Partager Torchie avec</string>
 
     <string name="welcome"><b>Bienvenue</b></string>
-    <string name="welcome_note">Simplifiez vous la vie avec <b>Torchie</b>! \n\nActivez <b>\'Fonctionnalités Torchie\'</b> pour allumer ou éteindre la torche en <b>maintenant les boutons de volume</b>!\n\nPlus de régalges Torchie dans <b>Paramètres</b>!</string>
+    <string name="welcome_note">Simplifiez-vous la vie avec <b>Torchie</b> !\n\nActivez <b>\"Fonctionnalités Torchie\"</b> pour allumer/éteindre la lampe torche en <b>maintenant les boutons de volume</b> !\n\nPlus de réglages Torchie dans <b>Paramètres</b> !</string>
     <string name="got_it">Compris</string>
-    <string name="permission_note">Activez <b>\'Torchie Quick\'</b> depuis les <b>Services</b> pour démarrer l\'expérience Torchie.</string>
-    <string name="permission_warn"><b>A propos des PERMISSIONS - </b> \"<i>...observer ce que vous tapez et vos actions...</i>\"\nCa fait peur! Android produit un \'Key Event\' quand un BOUTON PHYSIQUE est appuyé. C\'est de cette manière que Torchie capture l\'appui sur les boutons de volume. Mais c\'est un <i>défaut</i> d\'Android qui affiche cet AVERTISSEMENT sur les smartphones avec un CLAVIER VIRTUEL (excepté quelques smatphones très ancients ou le Blackberry Priv qui ont un vrai clavier physique). Il est impossible de faire fonctionner Torchie sans cette permission
-        \nDe plus, Torchie <b>N\'A PAS LA PERMISSION D\'UTILISER INTERNET</b>, il est donc impossible <i>d\'envoyer</i> quoique ce soit à qui que ce soit\n\n Torchie ne peut PAS <i>COLLECTER</i> de données. Sentez vous libre d\'activer les fonctionnalités Torchie! <a href="https://torchieapp.wordpress.com/help/">Plus en détails...</a> </string>
-    <string name="permission">Activer les fonctionnalités Torchie?</string>
+    <string name="permission_note">Activez <b>\"Torchie Quick\"</b> depuis les <b>Services</b> pour démarrer l\'expérience Torchie.</string>
+    <string name="permission_warn"><b>À propos de L\'AUTORISATION - </b> \"<i>...observer ce que vous tapez et vos actions...</i>\"\nÇa fait peur ! Android produit un \"Key Event\" quand un BOUTON PHYSIQUE est appuyé. C\'est de cette manière que Torchie capture l\'appui sur les boutons de volume. Mais c\'est un <i>défaut</i> d\'Android qui affiche cet AVERTISSEMENT sur les appareils avec un CLAVIER VIRTUEL (excepté quelques appareils très ancien et le Blackberry Priv qui ont un vrai clavier physique). Il est impossible de faire fonctionner Torchie sans cette autorisation
+        \nDe plus, Torchie <b>N\'A PAS L\'AUTORISATION INTERNET</b>, il est donc impossible <i>d\'envoyer</i> quoique ce soit à qui que ce soit\n\n Torchie ne peut PAS <i>COLLECTER</i> de données. N\'hésitez plus à activer les fonctionnalités Torchie ! <a href="https://torchieapp.wordpress.com/help/">En savoir plus</a> </string>
+    <string name="permission">Activer les fonctionnalités Torchie ?</string>
 
-    <string name="about_note"><i>Torchie - Touch to Torch &#169; 2016</i> \n\n<b>Torchie</b> a été fait par les frères\nMerbin J Anselm et Rebin J Anselm\nanselmbros@gmail.com\n\nMille mercis à ceux qui ont aidé à traduire Torchie</string>
-    <string name="about_anselm">A propos de Anselm &amp; Anselm</string>
+    <string name="about_note"><b>Torchie</b> est conçu par deux frères\nMerbin J Anselm et Rebin J Anselm\nanselmbros@gmail.com\n\nMille mercis à ceux qui ont aidé à traduire Torchie</string>
+    <string name="about_anselm">À propos de Anselm et Anselm</string>
     <string name="official_website">Visitez le site officiel</string>
     <string name="join_community">Rejoignez la communauté Béta</string>
     <string name="facebook">Facebook</string>
     <string name="google_plus">Google+</string>
 
-    <string name="donation_note">Cela nous a pris des <b>heures</b> pour faire Torchie, afin que vous ne <b>perdiez pas une seconde</b> pour allumer la torche!\nAidez le développement de Torchie en nous faisant un don</string>
-    <string name="thank_you_note">Votre attention nous motive!\n\nPartagez Torchie avec votre famille et vos amis!</string>
-    <string name="donation_error">Oups! Il y a eu une erreur pendant l\'envoi de votre amour!</string>
-    <string name="proceed_paypal">Continuer vers Paypal?</string>
+    <string name="donation_note">Cela nous a pris des <b>heures</b> pour faire Torchie, afin que vous ne <b>perdiez pas une seconde</b> pour allumer la lampe torche !\nAidez le développement de Torchie en nous faisant un don</string>
+    <string name="thank_you_note">Votre attention nous motive !\n\nPartagez Torchie avec votre famille et vos amis !</string>
+    <string name="donation_error">Oups ! Il y a eu une erreur pendant l\'envoi de votre amour !</string>
+    <string name="proceed_paypal">Continuer vers Paypal ?</string>
+    
 
     <string name="indefinite">Indéfini</string>
     <string name="minutes">Minutes</string>
     <string name="seconds">Secondes</string>
     <string name="milliseconds">Millisecondes</string>
-    <string name="vibrate">Vibrer</string>
-    <string name="torch_source">Source de la torche</string>
-    <string name="flash_or_led">Flash/LED</string>
+    <string name="vibrate">Vibreur</string>
+    <string name="torch_source">Source lampe torche</string>
+    <string name="flash_or_led">Flash/DEL</string>
     <string name="screen_light">Écran</string>
-    <string name="toggle_method">Méthode de détection</string>
-    <string name="both_vol_buttons">Volume + &amp; Volume -</string>
+    <string name="toggle_method">Méthode d\'activation</string>
+    <string name="both_vol_buttons">Volume + et -</string>
     <string name="volume_up">Volume +</string>
     <string name="volume_down">Volume -</string>
     <string name="hold_delay">Temps de réponse</string>
-    <string name="immediate">Immédiate</string>
-    <string name="not_work_screen_off">Ne fonctionne pas l\'écran éteint!</string>
-    <string name="torch_time_out">Extinction de la torche</string>
-    <string name="language_select">Choisir la langue</string>
+    <string name="immediate">Immédiat</string>
+    <string name="not_work_screen_off">Ne fonctionnera pas l\'écran éteint !</string>
+    <string name="torch_time_out">Extinction lampe torche</string>
+    <string name="language_select">Choisir une langue</string>
+    
+    <string name="notice"><b>Torchie</b> v%1$s  &#169; 2016\n\nTorchie est publié sans aucune garantie. Ce programme est un logiciel libre licencié sous
+    \nGNU General Public License v2.0\nLe code source est disponible ici https://github.com/anselm94/torchie-android\n</string>    
+    
 </resources>
