--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -48,7 +48,7 @@
     <string name="share">Deel</string>
 
     <string name="share_info">Skakel die flits aan deur net die volume knoppies saam te druk met Flitsie. Aflaai Flitsie nou! </string>
-    <string name="share_via">Deel 'n woord oor Flitsie via</string>
+    <string name="share_via">Deel \'n woord oor Flitsie via</string>
 
     <string name="welcome"><b>Welkom</b></string>
     <string name="welcome_note">Maak jou lewe makliker met <b>Flitsie</b>! \n\nAktiveer <b>\'Flitsie funksionaliteit\'</b> om die flits aan/af te skakel net deur die<b>volume knoppies saam te hou</b>!\n\nVerander meer in Flitsie <b>Instellings</b>!</string>
